# rsstonk

./: Cargo.toml  README.md
src/: client.rs  main.rs
